@@ -66,3 +66,6 @@ g2libc-1.4.0 - May      2012 - Added PDT 4.44,4.45,4.46,4.47,4.48 for Aerosol pr
 g2libc-1.5.0 - Sept.    2013 - Added PDT 4.33,4.34,4.53,4.54,4.50
                              - Added GDT 3.4,3.5,3.12,3.101,3.140
                              - Free up memory igds
+
+g2libc-1.6.0 - October  2015 - Added PDT 4.57, 4.60, 4.61 and
+                             - Allow a forecast time to be negative
